--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,5 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+abdi hussein ali <sharifka87@gmail.com>
+kamau f njeri <kamaufnjeri2019@gmail.com>
